# TP-AEDS2

./: README.md
aeds-2/: AEDSII.depend  AEDSII.layout  CMakeLists.txt  arvore_binaria.c  arvore_binaria.h  intercalacao.c  lista.c  main.c  particoes.c  particoes.h  pilha.c
